<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sign_up">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:onClick="Skip"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@android:color/holo_blue_dark"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/tutorial"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stat1"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/stat2"
        android:textSize="15sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat3"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Learn_more"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:onClick="Sign_up1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
</LinearLayout>
</ScrollView>