<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Registration"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="59dp"
        android:background="@drawable/login_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/splash_logo"
            android:layout_marginTop="100dp"
             />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/heading"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="16dp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:drawableLeft="@drawable/name"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Email"
                android:drawableLeft="@drawable/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:drawableLeft="@drawable/mobile_number"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:drawableStart="@drawable/mobile_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:drawableLeft="@drawable/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/round_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:onClick="click4"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statement"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sign_in"
                android:text="@string/sign_in"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>