<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/splash_logo"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo1" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableLeft="@drawable/email"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="65dp"
            android:drawableStart="@drawable/email" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:drawableLeft="@drawable/password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="149dp"
                android:drawableStart="@drawable/password" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:clickable="true"
            android:focusable="true"
            android:onClick="Forget_click"
            android:padding="20dp"
            android:text="@string/Button3"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="262dp"
            tools:layout_editor_absoluteY="159dp" />

    </RelativeLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:onClick="Sign_click"
            android:text="@string/Button"
            android:textColor="@android:color/white"
             />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text2"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                tools:layout_editor_absoluteX="113dp"
                tools:layout_editor_absoluteY="318dp" />

            <ImageView
                android:id="@+id/fb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@id/textView2"
                android:clickable="true"
                android:focusable="true"

                android:src="@drawable/facebook"
                android:contentDescription="@string/todo" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

        </RelativeLayout>



        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:padding="8dp"
            android:text="@string/text1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="sign_up"
            android:text="@string/Button2"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

    </LinearLayout>


    </LinearLayout>

</ScrollView>


